--- a/Confirmation.html
+++ b/Confirmation.html
@@ -276,7 +276,7 @@
 
     function handleLogout() {
         localStorage.removeItem('loggedInUser');
-        window.location.href = 'login.html';
+        window.location.href = 'index.html';
     }
     
     window.addEventListener('DOMContentLoaded', () => {
@@ -568,4 +568,5 @@
   </script>
 </body>
 </html>
+
 
